--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -21,10 +21,21 @@
     4. Add accessible line-height
     5. Improve text rendering
   */
+* {
+  transition: all 500ms cubic-bezier(0.01, 1.09, 0.78, 1);
+}
+
   body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
     font-family: 'Exo',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 500;
+    
+  }
+  
+  p {
+    font-size: 1.2em;
+
   }
   /*
     6. Improve media defaults
@@ -54,11 +65,16 @@
 
   h1,h2,h3,h4,h5,h6 {
     font-family: 'Raleway', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
   }
 
   a {
     text-decoration: none;
     color: inherit;
+  }
+
+  .logo {
+    padding-top: 5%;
   }
 
   .flex {
@@ -68,4 +84,10 @@
   .flex-cen {
     justify-content: center;
     align-items: center;
+  }
+
+  @media  (min-width: 50em) {
+    .menu {
+      display: none;
+    }
   }
