--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -23,7 +23,7 @@
     5. Improve text rendering
   */
 * {
-  transition: all 500ms cubic-bezier(0.01, 1.09, 0.78, 1);
+  /* transition: all 500ms cubic-bezier(0.01, 1.09, 0.78, 1); */
 }
 
   body {
@@ -62,6 +62,10 @@
   */
   #root, #__next {
     isolation: isolate;
+  }
+
+  ul {
+    list-style: none;
   }
 
   h1,h2,h3,h4,h5,h6 {
