--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -23,7 +23,7 @@
     5. Improve text rendering
   */
 * {
-  /* transition: all 500ms cubic-bezier(0.01, 1.09, 0.78, 1); */
+  transition: background-color 500ms cubic-bezier(0.01, 1.09, 0.78, 1);
 }
 
   body {
