--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -31,7 +31,7 @@ body {
     }
     
     p {
-      font-size: 1.2em;
+      font-size: 1.05rem;
 
     }
     /*
@@ -89,3 +89,6 @@ body {
       align-items: center;
     }
 
+    .hero-heading {
+      font-size: 1rem;
+    }
