--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,3 +1,5 @@
+  @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,600;0,700;0,900;1,500&display=swap');
+  
   /*
     1. Use a more-intuitive box-sizing model.
   */
@@ -25,7 +27,7 @@ body {
     body {
       line-height: 1.5;
       -webkit-font-smoothing: antialiased;
-      font-family: 'Montserrat',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: 'Work Sans',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-weight: 500;
       
     }
@@ -66,13 +68,21 @@ body {
     }
 
     h1,h2,h3,h4,h5,h6 {
-      font-family: 'Raleway', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: 'Kantumruy Pro', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-weight: 700;
     }
 
     a {
       text-decoration: none;
       color: inherit;
+    }
+
+    a.page__link {
+      border-bottom: 1px solid hsl(237, 63%, 71%);
+    }
+
+    a.page__link:hover {
+      border-bottom: 2px solid hsl(237, 63%, 61%);
     }
 
     .logo {
