--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -68,7 +68,7 @@ body {
     }
 
     h1,h2,h3,h4,h5,h6 {
-      font-family: 'Kantumruy Pro', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      font-family: 'DM Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-weight: 700;
     }
 
@@ -79,10 +79,13 @@ body {
 
     a.page__link {
       border-bottom: 1px solid hsl(237, 63%, 71%);
+      color: hsl(237, 63%, 71%);
+      cursor: pointer;
     }
 
     a.page__link:hover {
       border-bottom: 2px solid hsl(237, 63%, 61%);
+      color: hsl(237, 63%, 61%);
     }
 
     .logo {
